<resources>
    <string name="app_name">Demo_Basic_UI</string>
    <string name="tv_text">I am a TextView with link: https://www.google.com"</string>
    <string name="et_hint">This is an EditText</string>
    <string name="actv_hint">This is an AutoCompleteTextView</string>
    <string name="mactv_hint">This is an MultiAutoCompleteTextView</string>
    <string name="button_basic">Android Homepage</string>
    <string name="button_image">Image Button</string>
    <string name="button_on">Just waked up</string>
    <string name="button_off">Going to sleep</string>
    <string name="oreo">Oreo</string>
    <string name="nougat">Nougat</string>
    <string name="kitkat">Kitkat</string>
    <string name="switch_on">The switch is on</string>
    <string name="switch_off">The switch is off</string>
    <string name="switch_text">This is a switch</string>
    <string name="rating_excellent">Excellent</string>
    <string name="rating_good">Good</string>
    <string name="rating_poor">Poor</string>
    <string name="button_time">Pick Time</string>
    <string name="button_date">Pick Date</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
