<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.trungdang.practice.demo_basic_ui.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv" />

            <AutoCompleteTextView
                android:id="@+id/actv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et" />

            <MultiAutoCompleteTextView
                android:id="@+id/mactv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/actv" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_basic"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:baselineAligned="false"
                        android:textAlignment="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/mactv" />

                    <ImageButton
                        android:id="@+id/button_image1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginLeft="32dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="56dp"
                        android:layout_weight="1"
                        android:baselineAligned="false"
                        android:scaleX="0.5"
                        android:scaleY="0.5"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.475"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/button_basic" />

                    <ImageButton
                        android:id="@+id/button_image2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="48dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="48dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="48dp"
                        android:layout_weight="1"
                        android:baselineAligned="false"
                        android:scaleX="0.5"
                        android:scaleY="0.5"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.565"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/button_image" />

                    <ToggleButton
                        android:id="@+id/button_toggle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:baselineAligned="false" />
                </LinearLayout>
            </HorizontalScrollView>

            <CheckBox
                android:id="@+id/cb_oreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="checkBoxClickHandler"/>

            <CheckBox
                android:id="@+id/cb_nougat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="checkBoxClickHandler" />

            <CheckBox
                android:id="@+id/cb_kitkat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="checkBoxClickHandler"/>

            <Switch
                android:id="@+id/sw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                tools:checked="false" />

            <RadioGroup
                android:id="@+id/rg"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/rb_excel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rating_excellent" />

                <RadioButton
                    android:id="@+id/rb_good"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rating_good" />

                <RadioButton
                    android:id="@+id/rb_poor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rating_poor" />

            </RadioGroup>

            <Button
                android:id="@+id/button_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="showTimePickerDialog"
                android:text="@string/button_time" />

            <Button
                android:id="@+id/button_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="showDatePickerDialog"
                android:text="@string/button_date" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
